# liblava-demo

./: CMakeLists.txt  README.md
lamp/: lamp.cpp
liblava-demo/: lamp.cpp  spawn.cpp  triangle.cpp
res/lamp/: fragment.spirv  gen_spv.sh  lamp.frag  lamp.frag.u32  lamp.vert  lamp.vert.u32  vertex.spirv
res/spawn/: fragment.spirv  spawn.frag.u32  spawn.vert  spawn.vert.u32  vertex.spirv
res/triangle/: fragment.spirv  triangle.frag  triangle.frag.u32  triangle.vert  triangle.vert.u32  vertex.spirv
spawn/: spawn.cpp
triangle/: triangle.cpp
